TG-25 Rewrite sync client using google fonts api only
Rewrite of font sync client with usage of google fonts api. This reduces the strain on the sync significantly and only three methods are needed and no parsing of css anymore
